<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:id="@+id/searchbar"
    android:background="@color/primary"
    android:layout_height="match_parent">
    <ImageButton
        android:id="@+id/settings"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:onClick="onClick"
        android:contentDescription="@string/contdesc_settings"
        style="@android:style/Widget.Material.Light.Button.Borderless"
        android:src="@drawable/settings"/>

    <ImageButton
        android:id="@+id/home"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:onClick="onClick"
        android:layout_toEndOf="@id/settings"
        android:contentDescription="@string/contdesc_home"
        style="@android:style/Widget.Material.Light.Button.Borderless"
        android:src="@drawable/home"/>

    <ImageButton
        android:id="@+id/favorite"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:onClick="onClick"
        android:layout_toEndOf="@id/home"
        android:contentDescription="@string/contdesc_favorite"
        style="@android:style/Widget.Material.Light.Button.Borderless"
        android:src="@drawable/notfavorite"/>

    <ImageButton
        android:id="@+id/back"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:onClick="onClick"
        android:layout_toEndOf="@id/favorite"
        android:contentDescription="@string/contdesc_back"
        style="@android:style/Widget.Material.Light.Button.Borderless"
        android:src="@drawable/back"/>

    <ImageButton
        android:id="@+id/forward"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:onClick="onClick"
        android:layout_toEndOf="@id/back"
        android:contentDescription="@string/contdesc_forward"
        style="@android:style/Widget.Material.Light.Button.Borderless"
        android:src="@drawable/forward"/>

    <ImageButton
        android:id="@+id/voice"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:onClick="onClick"
        android:layout_toEndOf="@id/forward"
        android:contentDescription="@string/contdesc_voice"
        style="@android:style/Widget.Material.Light.Button.Borderless"
        android:src="@drawable/mic"/>

    <ImageButton
        android:id="@+id/refresh"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:onClick="onClick"
        android:layout_toEndOf="@id/voice"
        android:contentDescription="@string/contdesc_refresh"
        style="@android:style/Widget.Material.Light.Button.Borderless"
        android:src="@drawable/refresh"/>

    <ImageButton
        android:id="@+id/dropdown"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:onClick="onClick"
        android:layout_toRightOf="@id/refresh"
        android:contentDescription="@string/contdesc_dropdown"
        style="@android:style/Widget.Material.Light.Button.Borderless"
        android:src="@drawable/unfold"/>

    <EditText
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:singleLine="true"
        android:lines="1"
        android:inputType="text"
        android:contentDescription="@string/contdesc_edit"
        android:layout_toEndOf="@id/dropdown" />

</RelativeLayout>